--- a/codigoFonte/ListagemTV/app/src/main/res/layout/activity_produtos.xml
+++ b/codigoFonte/ListagemTV/app/src/main/res/layout/activity_produtos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.indt.susan.listagemtv.ProdutosActivity">
+    tools:context="br.com.indt.susan.listagemtv.view.activity.ProdutosActivity">
 
     <TextView
         android:layout_width="wrap_content"
