--- a/codigoFonte/ListagemTV/app/src/main/res/layout/activity_produto_detalhe.xml
+++ b/codigoFonte/ListagemTV/app/src/main/res/layout/activity_produto_detalhe.xml
@@ -4,14 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.indt.susan.listagemtv.view.activity.ProdutosActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_produtos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:elevation="0dp"
-        android:paddingBottom="80dp" />
+    tools:context="br.com.indt.susan.listagemtv.view.activity.ProdutoDetalheActivity">
 
 </android.support.constraint.ConstraintLayout>
